<resources>
    <string name="app_name">SPS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rock">ROCK</string>
    <string name="paper">PAPER</string>
    <string name="scissors">SCISSORS</string>
    <string name="computer_apos_s_choice">Computer</string>
    <string name="your_wins">Your wins</string>
    <string name="computer_apos_s_wins">Computer\'s wins</string>
    <string name="go">Go</string>
    <string name="number_of_rounds">Number Of Rounds</string>
    <string name="enter_player_2_name">Enter Player 2 Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="start_game">Start Game</string>

    <array name="Mode">
        <item>Solo</item>
        <item>MultiPlayer</item>
    </array>
</resources>
