<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="10dp"
    tools:context=".PlayerDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="130dp"
            android:layout_height="81dp"
            android:rotation="180"
            android:src="@drawable/arrow_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/font"
            android:text="@string/enter_your_name"
            android:textColor="@color/red"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPlayer2name" />

        <TextView
            android:id="@+id/player2name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/font"
            android:text="@string/enter_player_2_name"
            android:textColor="@color/red"
            android:textSize="32sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backButton" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/font"
            android:text="@string/number_of_rounds"
            android:textColor="@color/red"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEnteredNum" />

        <EditText
            android:id="@+id/etEnteredNum"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/font"
            android:inputType="text"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/etPlayer2name"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/font"
            android:inputType="text"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/player2name"
            app:layout_constraintStart_toStartOf="@+id/player2name"
            app:layout_constraintTop_toBottomOf="@+id/player2name" />

        <EditText
            android:id="@+id/etEnteredNum2"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/font"
            android:inputType="number"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/btGo"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/font"
            android:text="@string/go"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/etEnteredNum2"
            app:layout_constraintStart_toStartOf="@+id/etEnteredNum2"
            app:layout_constraintTop_toBottomOf="@+id/etEnteredNum2" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>