<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/transparent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/backButton"
            android:layout_width="130dp"
            android:layout_height="81dp"
            android:rotation="180"
            android:src="@drawable/arrow_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">



        <Button
            android:id="@+id/rock_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@+id/player_label"
            android:layout_alignEnd="@+id/paper_button"
            android:layout_alignRight="@+id/paper_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="12dp"
            android:background="@drawable/button_bg"
            android:text="ROCK"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/paper_button"
            app:layout_constraintEnd_toEndOf="@+id/paper_button"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UnknownId" />

        <Button
            android:id="@+id/rock_button3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/paper_button"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="12dp"
            android:background="@drawable/button_bg"
            android:text="@string/rock"

            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/paper_button3"
            app:layout_constraintEnd_toEndOf="@+id/paper_button3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/paper_button3" />

        <Button
            android:id="@+id/paper_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@+id/rock_button"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="12dp"
            android:background="@drawable/button_bg"
            android:text="@string/paper"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/scissor_button"
            app:layout_constraintEnd_toEndOf="@+id/scissor_button"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/scissor_button" />

        <Button
            android:id="@+id/paper_button3"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@+id/rock_button"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="12dp"
            android:background="@drawable/button_bg"
            android:text="@string/paper"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/scissor_button3"
            app:layout_constraintEnd_toEndOf="@+id/scissor_button3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/scissor_button3" />

        <Button
            android:id="@+id/scissor_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@+id/paper_button"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_bg"
            android:text="@string/scissors"

            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/scissor_button3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@+id/paper_button"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_bg"
            android:text="@string/scissors"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/player_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/font"
            android:text="0"
            android:textSize="32sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/red1"
            app:layout_constraintEnd_toEndOf="@+id/your_win_label"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="@+id/your_win_label"
            app:layout_constraintTop_toBottomOf="@+id/your_win_label" />

        <TextView
            android:id="@+id/comp_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/player_score"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/font"
            android:text="0"
            android:textSize="32sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/red1"
            app:layout_constraintEnd_toEndOf="@+id/computer_win_label"
            app:layout_constraintHorizontal_bias="0.44"
            app:layout_constraintStart_toStartOf="@+id/computer_win_label"
            app:layout_constraintTop_toBottomOf="@+id/computer_win_label" />

        <TextView
            android:id="@+id/your_choice_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scissor_button"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/font"
            android:text="Your"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#4D2791"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/playerMove"
            app:layout_constraintEnd_toEndOf="@+id/playerMove"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="@+id/playerMove" />

        <TextView
            android:id="@+id/computer_choice_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scissor_button"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/font"
            android:textSize="22sp"
            android:text="@string/computer_apos_s_choice"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/darkblue"
            app:layout_constraintBottom_toTopOf="@+id/compMove"
            app:layout_constraintEnd_toEndOf="@+id/compMove"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/compMove" />

        <TextView
            android:id="@+id/your_win_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/player_score"
            android:layout_alignParentStart="true"
            android:layout_marginStart="56dp"
            android:layout_marginBottom="80dp"
            android:fontFamily="@font/font"
            android:text="@string/your_wins"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/darkblue"
            app:layout_constraintBottom_toTopOf="@+id/rock_button"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/computer_win_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/comp_score"
            android:layout_alignEnd="@+id/comp_score"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="80dp"
            android:fontFamily="@font/font"
            android:text="@string/computer_apos_s_wins"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/darkblue"
            app:layout_constraintBottom_toTopOf="@+id/rock_button3"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/playerMove"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_below="@id/your_choice_label"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/your_win_label"
            app:layout_constraintEnd_toEndOf="@+id/your_win_label"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="@+id/your_win_label" />

        <ImageView
            android:id="@+id/compMove"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_below="@id/computer_choice_label"
            android:layout_alignTop="@+id/playerMove"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/computer_win_label"
            app:layout_constraintEnd_toEndOf="@+id/computer_win_label"
            app:layout_constraintHorizontal_bias="0.276"
            app:layout_constraintStart_toStartOf="@+id/computer_win_label" />

        <ImageView
            android:id="@+id/rock_paper"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/playerMove"
            android:layout_alignParentStart="true"
            android:src="@drawable/rock_paper"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/rock_Scissor"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/playerMove"
            android:layout_alignParentStart="true"
            android:src="@drawable/rock_scissor"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/rock_stone"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/playerMove"
            android:layout_alignParentStart="true"
            android:src="@drawable/rock_stone"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>